force-app/main/default/objects/Enrollement__c/Enrollement__c.object-meta.xml
<CustomObject>
    <label>Enrollement</label>
    <nameField>
        <label>Enrollement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>