force-app/main/default/objects/Enrollement__c/fields/Already_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Already_Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already Enrolled</label>
    <type>Checkbox</type>
</CustomField>