force-app/main/default/objects/Enrollement__c/fields/Cours__c.field-meta.xml
<CustomField>
    <fullName>Cours__c</fullName>
    <label>Cours</label>
    <referenceTo>Cours__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>