force-app/main/default/objects/Enrollement__c/fields/Course_Expired__c.field-meta.xml
<CustomField>
    <fullName>Course_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course Expired</label>
    <type>Checkbox</type>
</CustomField>