force-app/main/default/objects/Enrollement__c/fields/Studs__c.field-meta.xml
<CustomField>
    <fullName>Studs__c</fullName>
    <label>Studs</label>
    <referenceTo>Studs__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>