force-app/main/default/objects/Enrollement__c/validationRules/check_course_expired.validationRule-meta.xml
<ValidationRule>
    <fullName>check_course_expired</fullName>
    <active>true</active>
    <errorConditionFormula>Course_Expired__c</errorConditionFormula>
    <errorDisplayField>Cours__c</errorDisplayField>
    <errorMessage>The Duration of course has ended</errorMessage>
</ValidationRule>