force-app/main/default/objects/Enrollement__c/validationRules/check_student_enrolled_or_not.validationRule-meta.xml
<ValidationRule>
    <fullName>check_student_enrolled_or_not</fullName>
    <active>true</active>
    <errorConditionFormula>Already_Enrolled__c</errorConditionFormula>
    <errorMessage>Student is already enrolled</errorMessage>
</ValidationRule>