force-app/main/default/objects/Enrollement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_End_Date__c</columns>
    <columns>Course_Expired__c</columns>
    <columns>Cours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>